master: fix for ul not showing correctly.

--- a/client/main.css
+++ b/client/main.css
@@ -1,1 +1,10 @@
 /* CSS declarations go here */
+
+body {
+
+}
+
+.profPicList {
+
+    padding-top: 70px;
+}
